test/libyul/yulSyntaxTests/name_clashes.yul
{
    let g := 2
    function g() { }
}
// ----
// DeclarationError 1395: (6-16): Variable name g already taken in this scope.
